# xpiz-material

./: Cargo.toml  build.rs  peek.sh
.github/workflows/: build.yml
ui/: main.slint  main_window_adapter.slint
ui/components/: component_card.slint  group.slint  text_icon_button.slint
ui/views/: actions_view.slint  components_view.slint  main_view.slint  navigation_view.slint
