# Modified version of Slint Material Gallery
[package]
name = "xpiz-material"
version = "0.1.0"
authors = ["YourName"]
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
name = "material_gallery"

[[bin]]
path = "src/main.rs"
name = "xpiz-material"

[dependencies]
# Kita ambil slint versi terbaru dari internet
slint = { version = "1.9.0", features = ["renderer-skia", "backend-android-activity-06"] }
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
css-color-parser2 = "1.0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = "0.1.5"

[build-dependencies]
slint-build = { version = "1.9.0" }

[package.metadata.android]
package = "com.invuzt.xpizmaterial"
apk_name = "xpiz_material"

[package.metadata.android.application]
label = "XPIZ Material"
